src/objects/CustomObject7__c.object
<CustomObject>
    <fields>
        <fullName>Engineer_gcsdagl__c</fullName>
        <label>工程师档案编号</label>
        <referenceTo>gcsdagl__c</referenceTo>
        <relationshipLabel>工程师奖罚管理</relationshipLabel>
        <relationshipName>gcsjfgl</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>奖罚内容</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>奖励</fullName>
                    <default>true</default>
                    <label>奖励</label>
                </value>
                <value>
                    <fullName>处罚</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>奖罚方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>通报表扬</fullName>
                    <default>true</default>
                    <label>通报表扬</label>
                </value>
                <value>
                    <fullName>现金奖励</fullName>
                </value>
                <value>
                    <fullName>通报批评</fullName>
                </value>
                <value>
                    <fullName>通报表扬+现金奖励</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jfrq__c</fullName>
        <label>奖罚日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jfyy__c</fullName>
        <label>奖罚原因</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jtnr__c</fullName>
        <label>具体内容</label>
        <type>TextArea</type>
    </fields>
    <label>工程师奖罚管理</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>奖罚记录</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>工程师奖罚管理</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>